<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.shahrukhzarir.labthree.MainActivity">
    <TextView
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:text="@string/intro"
        android:textSize="30dp"
        android:textColor="#ff5e9cff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246"
        android:id="@+id/textView2"
        android:layout_marginTop="41dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="276dp"
        android:layout_height="65dp"
        android:text="@string/about"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="223dp"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="276dp"
        android:layout_height="64dp"
        android:text="@string/login_button"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="319dp"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/aboutButton"
        android:layout_alignLeft="@+id/aboutButton"
        android:layout_alignStart="@+id/aboutButton" />


</RelativeLayout>