<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.shahrukhzarir.labthree.LoginActivity">

    <EditText
        android:id="@+id/enterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="13dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/username"
        android:layout_toEndOf="@+id/username" />

    <TextView
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:text="@string/username"
        android:textSize="25dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246"
        android:id="@+id/username"
        android:layout_above="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="133dp"
        android:layout_height="40dp"
        android:text="@string/password"
        android:textSize="25dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246"
        android:id="@+id/password"
        android:layout_above="@+id/LoginBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/enterPsd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterName"
        android:layout_toEndOf="@+id/password"
        android:layout_toRightOf="@+id/password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="193dp"
        android:layout_height="75dp"
        android:textSize="20dp"
        android:text="@string/login_button"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="163dp"
        android:onClick="onClick"
        android:layout_below="@+id/enterPsd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />

</RelativeLayout>